--- a/templates/page.html
+++ b/templates/page.html
@@ -7,12 +7,12 @@
 <ul>
 {% for h1 in page.toc %}
     <li>
-        <a class="internal" href="{{ h1.permalink | replace(from="/#", to="#") }}">{{ h1.title }}</a>
+        <a class="internal" href="{{ h1.permalink | safe }}">{{ h1.title }}</a>
         {% if h1.children %}
             <ul>
                 {% for h2 in h1.children %}
                     <li>
-                        <a class="internal" href="{{ h2.permalink | replace(from="/#", to="#") }}">{{ h2.title }}</a>
+                        <a class="internal" href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
                     </li>
                 {% endfor %}
             </ul>
