Trim menu, add personal links to landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Index - Hazelnut{% endblock title %}
+{% block title %}Welcome - Hazelnut{% endblock title %}
 
 {% block content %}
 {{ section.content | safe }}
