--- a/style.css
+++ b/style.css
@@ -47,45 +47,54 @@ a {
 }
 
 a:not(.internal)::after {
-    content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%23ffcd5d'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
+    content: " " url("/link.svg");
+}
+
+a.external::after {
+    content: " [" attr(href) "]" url("/link.svg");
+    color: #ffcd5d;
 }
 
 nav a {
     color: #ffcd5d;
 }
 
-table {
-    border-collapse: collapse;
-}
-
-table, th, td {
-    padding: 0.5em;
-}
-
-th {
-    border-bottom: 2px solid #d3d0c8;
-}
-
-td {
-    border: 1px solid #d3d0c8;
-}
-
-table tr td:first-child {
-    border-left: 0;
-}
-
-table tr td:last-child {
-    border-right: 0;
-}
-
-table tr:last-child td {
-    border-bottom: 0;
-}
-
-tr:nth-child(even) {
-    background-color: #353535;
+nav a::after {
+    content: " " url("/link.svg");
 }
 
 div.table-wrapper {
     overflow-x: auto;
+}
+
+div.table-wrapper table {
+    border-collapse: collapse;
+}
+
+div.table-wrapper table, th, td {
+    padding: 0.5em;
+}
+
+div.table-wrapper th {
+    border-bottom: 2px solid #d3d0c8;
+}
+
+div.table-wrapper td {
+    border: 1px solid #d3d0c8;
+}
+
+div.table-wrapper table tr td:first-child {
+    border-left: 0;
+}
+
+div.table-wrapper table tr td:last-child {
+    border-right: 0;
+}
+
+div.table-wrapper table tr:last-child td {
+    border-bottom: 0;
+}
+
+div.table-wrapper tr:nth-child(even) {
+    background-color: #353535;
 }
