Header pre colors, verify on hellsite

--- a/static/style.css
+++ b/static/style.css
@@ -30,14 +30,17 @@ h2 {
 
 h1::before {
     content: "# ";
+    color: #747369;
 }
 
 h2::before {
     content: "## ";
+    color: #747369;
 }
 
 h3::before {
     content: "### ";
+    color: #747369;
 }
 
 a {
