--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,14 @@
 <header>
     <h1 class="site-title">{{ config.title }}</h1>
     <nav>
-        {% for item in config.extra.menu %}
-        <a href="{{ item.url | safe | replace(from="$BASE_URL", to=config.base_url) }}">
-            {{ item.name }}
-        </a>
-        {% endfor %}
+        <ul>
+            {% for item in config.extra.menu %}
+                <li>
+                    <a class="{% if not item.external %}internal{% endif %}" href="{{ item.url | safe | replace(from="$BASE_URL", to=config.base_url) }}">
+                        {{ item.name }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
     </nav>
 </header>
