--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 
+<h1 class="post-title">{{ page.title }}</h1>
+<p class="post-date">{{ page.date | date() }}</p>
+
 {% if page.extra.toc %}
 <h1>Table of Contents <span id="toc-toggle">[-]</span></h1>
 <div id="toc">
